fixes to explore and filter for whitespace and overscorlling

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -114,7 +114,8 @@ layout: base.liquid
                 Choose the map images or feature icons to enable the filters you require.
             </p>
         </article>
-
+         <div class="storyTitleSpacerBelow"></div>
+         <div class="storyTitleSpacerBelow"></div>
         
 
       <!-- <article id="half-page-filter">
