deploy: 0759fcfc8de1661a926642dc310c16eb0a0375f9

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -528,6 +528,10 @@ nav {
   padding: 0.2em 0;
 }
 
+#filter-wrapper * {
+  overscroll-behavior: contain;
+}
+
 #filter-wrapper {
   z-index: 99;
   pointer-events: auto;
