--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -190,109 +190,103 @@ layout: base.liquid
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="1"
                                class="map_filter" id="checkbox1"/>
                         <label for="checkbox1">
-                            <img src="https://accessgenealogy.com/wp-content/uploads/2011/07/1755-Mitchell-Map-3-1080x763.jpg"/><span>1590 <em>White</em></span>
+                            <img src="../assets/img/map-thumbs/1590-White.jpg" alt="cropped image of map"><span>1590 <em>White</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="2"
                                class="map_filter" id="checkbox2"/>
                         <label for="checkbox2">
-                            <img
-                                    src="https://i5.walmartimages.com/asr/a38e5625-1031-479a-9b35-266e586ecd52_3.bbdfa3a052b52f8616bc011236bc4f31.jpeg"/><span>1650 <em>Bleau</em></span>
+                            <img src="../assets/img/map-thumbs/1650-Bleau.jpg" alt="cropped image of map"><span>1650 <em>Bleau</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="3"
                                class="map_filter" id="checkbox3"/>
                         <label for="checkbox3">
-                            <img src="https://i.ebayimg.com/images/g/ojsAAOSwNEVdXw0v/s-l1600.jpg"/><span>1676 <em>Seller</em></span>
+                            <img src="../assets/img/map-thumbs/1676-Seller.jpg" alt="cropped image of map"><span>1676 <em>Seller</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="5"
                                class="map_filter" id="checkbox4"/>
                         <label for="checkbox4">
-                            <img src="https://accessgenealogy.com/wp-content/uploads/2011/07/1755-Mitchell-Map-3-1080x763.jpg"/><span>1677 <em>Foster</em></span>
+                            <img src="../assets/img/map-thumbs/1677-Foster.jpg" alt="cropped image of map"><span>1677 <em>Foster</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="6"
                                class="map_filter" id="checkbox5"/>
                         <label for="checkbox5">
-                            <img
-                                    src="https://i5.walmartimages.com/asr/a38e5625-1031-479a-9b35-266e586ecd52_3.bbdfa3a052b52f8616bc011236bc4f31.jpeg"/><span>1720 <em>Moll</em></span>
+                            <img src="../assets/img/map-thumbs/1720-Moll.jpg" alt="cropped image of map"><span>1720 <em>Moll</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="7"
                                class="map_filter" id="checkbox6"/>
                         <label for="checkbox6">
-                            <img src="https://i.ebayimg.com/images/g/ojsAAOSwNEVdXw0v/s-l1600.jpg"/><span>1738 <em>Burghers</em></span>
+                            <img src="../assets/img/map-thumbs/1738-Burghers.jpg" alt="cropped image of map"><span>1738 <em>Burghers</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="8"
                                class="map_filter" id="checkbox8"/>
                         <label for="checkbox8">
-                            <img
-                                    src="https://i5.walmartimages.com/asr/a38e5625-1031-479a-9b35-266e586ecd52_3.bbdfa3a052b52f8616bc011236bc4f31.jpeg"/><span>1752 <em>Evans</em></span>
+                            <img src="../assets/img/map-thumbs/1752-Evans.jpg" alt="cropped image of map"><span>1752 <em>Evans</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="10"
                                class="map_filter" id="checkbox9"/>
                         <label for="checkbox9">
-                            <img src="https://i.ebayimg.com/images/g/ojsAAOSwNEVdXw0v/s-l1600.jpg"/><span>1755 <em>Herbert</em></span>
+                            <img src="../assets/img/map-thumbs/1755-Herbert.jpg" alt="cropped image of map"><span>1755 <em>Herbert</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="11"
                                class="map_filter" id="checkbox10"/>
                         <label for="checkbox10">
-                            <img src="https://accessgenealogy.com/wp-content/uploads/2011/07/1755-Mitchell-Map-3-1080x763.jpg"/><span>1755 <em>Moll</em></span>
+                            <img src="../assets/img/map-thumbs/1755-Mitchell.jpg" alt="cropped image of map"><span>1755 <em>Mitchell</em></span><
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="12"
                                class="map_filter" id="checkbox11"/>
                         <label for="checkbox11">
-                            <img
-                                    src="https://i5.walmartimages.com/asr/a38e5625-1031-479a-9b35-266e586ecd52_3.bbdfa3a052b52f8616bc011236bc4f31.jpeg"/><span>1755 <em>Mitchell</em></span>
+                            <img src="../assets/img/map-thumbs/1755-Moll.jpg" alt="cropped image of map">span>1755 <em>Moll</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="13"
                                class="map_filter" id="checkbox12"/>
                         <label for="checkbox12">
-                            <img src="https://i.ebayimg.com/images/g/ojsAAOSwNEVdXw0v/s-l1600.jpg"/><span>1772 <em>Bowen</em></span>
+                            <img src="../assets/img/map-thumbs/1772-Bowen.jpg" alt="cropped image of map"><span>1772 <em>Bowen</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="14"
                                class="map_filter" id="checkbox13"/>
                         <label for="checkbox13">
-                            <img src="https://accessgenealogy.com/wp-content/uploads/2011/07/1755-Mitchell-Map-3-1080x763.jpg"/><span>1774 <em>Jefferys</em></span>
+                            <img src="../assets/img/map-thumbs/1774-Jefferys.jpg" alt="cropped image of map"><span>1774 <em>Jefferys</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="15"
                                class="map_filter" id="checkbox14"/>
                         <label for="checkbox14">
-                            <img
-                                    src="https://i5.walmartimages.com/asr/a38e5625-1031-479a-9b35-266e586ecd52_3.bbdfa3a052b52f8616bc011236bc4f31.jpeg"/><span>1778 <em>Hutchins</em></span>
+                            <img src="../assets/img/map-thumbs/1778-Hutchins.jpg" alt="cropped image of map"><span>1778 <em>Hutchins</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="16"
                                class="map_filter" id="checkbox15"/>
                         <label for="checkbox15">
-                            <img src="https://i.ebayimg.com/images/g/ojsAAOSwNEVdXw0v/s-l1600.jpg"/><span>1783 <em>Cary</em></span>
+                            <img src="../assets/img/map-thumbs/1783-Cary.jpg" alt="cropped image of map"><span>1783 <em>Cary</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="17"
                                class="map_filter" id="checkbox16"/>
                         <label for="checkbox16">
-                            <img src="https://accessgenealogy.com/wp-content/uploads/2011/07/1755-Mitchell-Map-3-1080x763.jpg"/><span>1784 <em>Buell</em></span>
+                            <img src="../assets/img/map-thumbs/1784-Buell.jpg" alt="cropped image of map"><span>1784 <em>Buell</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="18"
                                class="map_filter" id="checkbox17"/>
                         <label for="checkbox17">
-                            <img
-                                    src="https://i5.walmartimages.com/asr/a38e5625-1031-479a-9b35-266e586ecd52_3.bbdfa3a052b52f8616bc011236bc4f31.jpeg"/><span>1794 <em>Russell</em></span>
+                            <img src="../assets/img/map-thumbs/1794-Russell.jpg" alt="cropped image of map"><span>1794 <em>Russell</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="19"
                                class="map_filter" id="checkbox18"/>
                         <label for="checkbox18">
-                            <img src="https://i.ebayimg.com/images/g/ojsAAOSwNEVdXw0v/s-l1600.jpg"/><span>1796 <em>Bradley</em></span>
+                            <img src="../assets/img/map-thumbs/1796-Bradley.jpg" alt="cropped image of map"><span>1796 <em>Bradley</em></span>
                         </label>
                     </li>
 
