deat: styled map hovers

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -244,7 +244,7 @@ layout: base.liquid
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="12"
                                class="map_filter" id="checkbox11"/>
                         <label for="checkbox11">
-                            <img src="../assets/img/map-thumbs/1755-Moll.jpg" alt="cropped image of map">span>1755 <em>Moll</em></span>
+                            <img src="../assets/img/map-thumbs/1755-Moll.jpg" alt="cropped image of map"><span>1755 <em>Moll</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="13"
