--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -639,7 +639,6 @@ justify-content: space-between;
                 height:40px;
                 width: 40px;
                 transition-duration: 0.2s;
-                border: 1px solid lightgray;
                 border-radius:50%;
                 vertical-align: middle;
                 margin-right:8px;
@@ -648,10 +647,6 @@ justify-content: space-between;
             &:hover{
                 background:lighten(lightgray,5%);
                 opacity:0.9;
-                 img{
-                border: 1px solid transparent;
-                //transform: scale(1.1);
-              }//img
               :checked + label{
                 //transform: scale(1);
               }//:checked + label img
@@ -687,6 +682,26 @@ justify-content: space-between;
           border:none;
         }
       }
+      section:last-of-type{
+        ol {
+          li {
+            img{
+          width:50px;
+          height:50px;
+          @include transition(all 300ms ease-in); 
+            }
+            &:hover{
+              img{
+                @include transform(scale(3.7)translate(-30px,0));
+                z-index: 999;
+                box-shadow: 1px 1px 3px#666, 0 0 1px #777 ;
+                opacity:1;
+              }
+            }
+          }
+        }
+      }
+
   }/* end .content */
     input#filter[type="checkbox"] {
       display: none;
