--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -676,7 +676,6 @@ nav {
   height: 40px;
   width: 40px;
   transition-duration: 0.2s;
-  border: 1px solid lightgray;
   border-radius: 50%;
   vertical-align: middle;
   margin-right: 8px;
@@ -684,9 +683,6 @@ nav {
 #filter-wrapper .content section ol li:hover {
   background: #e0e0e0;
   opacity: 0.9;
-}
-#filter-wrapper .content section ol li:hover img {
-  border: 1px solid transparent;
 }
 #filter-wrapper .content section ol li input[type=checkbox][id^=checkbox] {
   display: none;
@@ -703,6 +699,25 @@ nav {
 #filter-wrapper .content section:first-of-type ol li img {
   border-radius: 0;
   border: none;
+}
+#filter-wrapper .content section:last-of-type ol li img {
+  width: 50px;
+  height: 50px;
+  -webkit-transition: all 300ms ease-in;
+  -moz-transition: all 300ms ease-in;
+  -ms-transition: all 300ms ease-in;
+  -o-transition: all 300ms ease-in;
+  transition: all 300ms ease-in;
+}
+#filter-wrapper .content section:last-of-type ol li:hover img {
+  -moz-transform: scale(3.7) translate(-30px, 0);
+  -o-transform: scale(3.7) translate(-30px, 0);
+  -ms-transform: scale(3.7) translate(-30px, 0);
+  -webkit-transform: scale(3.7) translate(-30px, 0);
+  transform: scale(3.7) translate(-30px, 0);
+  z-index: 999;
+  box-shadow: 1px 1px 3px #666, 0 0 1px #777;
+  opacity: 1;
 }
 #filter-wrapper input#filter[type=checkbox] {
   display: none;
