feat: restyled title and added example Pathway subtitle

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -80,7 +80,9 @@ layout: base.liquid
     <section id="s-3">
         <div class="storyTitleSpacerAbove"></div>
         <article id="slide_600" data-slideId="600" class="storyTitle mapSlide">
-            <h2>Pathways</h2>
+            <h2>Pathways
+                <span>connections between places and peoples</span>
+            </h2>
         </article>
         <div class="article_spacer">&nbsp;</div>
          <div class="storyTitleSpacerBelow"></div>
