--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Corben:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap");
 /*** MIXINS ***/
 html {
   box-sizing: border-box;
@@ -18,7 +14,7 @@ body {
   width: 100%;
   padding: 0;
   margin: 0 auto;
-  font-family: "Manrope", sans-serif;
+  font-family: "Playfair Display", serif;
 }
 
 a:hover {
@@ -35,11 +31,8 @@ a#sitetitle {
   background: #132b19;
   height: 44px;
   z-index: 9;
-  font-family: "Corben", cursive;
   font-size: 22px;
   border-bottom: 4px solid #4b5d04;
-  font-family: "Playfair Display", serif;
-  font-family: "EB Garamond", serif;
 }
 
 nav {
@@ -195,7 +188,6 @@ nav {
   position: fixed;
   width: 60%;
   margin: 0 20%;
-  font-family: "Pontano Sans", sans-serif;
   border: 1px solid #124d20;
   border-top: 0;
 }
@@ -322,10 +314,6 @@ nav {
   padding: 16px 32px;
   margin: 0 15% 0 15%;
   text-align: justify;
-}
-.mapOverlay section article blockquote {
-  font-family: "Playfair Display", serif;
-  font-family: "EB Garamond", serif;
 }
 .mapOverlay section article blockquote p {
   font-style: italic;
@@ -517,15 +505,25 @@ nav {
   padding-bottom: 65vh;
 }
 .mapOverlay section article.storyTitle {
-  padding: 0 2em;
+  padding: 2em;
   margin-top: 10vh;
   margin-bottom: 0;
-  background: #132b19;
 }
 .mapOverlay section article.storyTitle h2 {
-  color: white;
+  color: black;
   margin: 0;
-  padding: 0.2em 0;
+  padding: 2em 0;
+  text-align: center;
+  border-bottom: 3px double;
+  border-top: 3px double;
+  font-size: 30px;
+}
+.mapOverlay section article.storyTitle h2 span {
+  display: block;
+  font-style: italic;
+  font-size: 16px;
+  padding-top: 16px;
+  font-weight: normal;
 }
 
 #filter-wrapper * {
@@ -535,7 +533,6 @@ nav {
 #filter-wrapper {
   z-index: 99;
   pointer-events: auto;
-  font-family: "Pontano Sans", sans-serif;
   /* end .content */
 }
 #filter-wrapper > label {
@@ -749,7 +746,6 @@ nav {
 #legend-wrapper {
   z-index: 99;
   pointer-events: auto;
-  font-family: "Pontano Sans", sans-serif;
   /* end .content */
 }
 #legend-wrapper > label {
