explore filters updated

--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -659,6 +659,9 @@ justify-content: space-between;
             input[type="checkbox"][id^="checkbox"] {
               display: none;
               }
+            input[type="checkbox"][id^="mapcheckbox"] {
+              display: none;
+              }
 
             :checked + label{
               font-weight: bold;
