deploy: bacf402603536fe54211c32d4ed82e5abdcbb586

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -684,6 +684,9 @@ nav {
 #filter-wrapper .content section ol li input[type=checkbox][id^=checkbox] {
   display: none;
 }
+#filter-wrapper .content section ol li input[type=checkbox][id^=mapcheckbox] {
+  display: none;
+}
 #filter-wrapper .content section ol li :checked + label {
   font-weight: bold;
   background: #132b19;
