post-merge checkbox filter fixes

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -234,13 +234,13 @@ layout: base.liquid
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="8"
                                class="map_selector" id="mapcheckbox8"/>
-                        <label for="checkbox8">
+                        <label for="mapcheckbox8">
                             <img src="../assets/img/map-thumbs/1752-Evans.jpg" alt="cropped image of map"><span>1752 <em>Evans</em></span>
                         </label>
                     </li>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="10"
                                class="map_selector" id="mapcheckbox9"/>
-                        <label for="checkbox9">
+                        <label for="mapcheckbox9">
                             <img src="../assets/img/map-thumbs/1755-Herbert.jpg" alt="cropped image of map"><span>1755 <em>Herbert</em></span>
                         </label>
                     </li>
