deploy: 814f47e14bacfd9a3f5ab9250a817c351b2ebe1b

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -638,7 +638,7 @@ nav {
   margin: 0;
 }
 #filter-wrapper .content section header h3 em {
-  color: gray;
+  color: #757575;
   font-size: 0.6em;
 }
 #filter-wrapper .content section ol {
