fix{a11ty}: change label in Filter

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -120,7 +120,7 @@ layout: base.liquid
 <section>
  <header><h3>Features <em><span id="totalExploreFiltersApplied">0</span>/7 Selected</em></h3>
  <span><input type="checkbox" id="selectallFeatures" name="selectall" value="All">
-<label for="selectall">Select All</label></span>
+<label for="selectallFeatures">Select All</label></span>
  </header>
 
  <ol>
@@ -175,7 +175,7 @@ layout: base.liquid
  <section>
      <header><h3>Maps <em><span id="totalMapFiltersApplied">0</span>/17 Selected</em></h3>
  <span><input type="checkbox" id="selectallMaps" name="selectall" value="All">
-<label for="selectall">Select All</label></span>
+<label for="selectallMaps">Select All</label></span>
  </header>
                 <ol>
                     <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="1"
