fix{a11ty}: change background colour for icon images

--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -665,6 +665,7 @@ justify-content: space-between;
               //transform: scale(1);
              border:1px solid $midgreen;
               opacity:1;
+              background: white;
               }//img
 
                 }//:checked + label
