--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -491,7 +491,7 @@ nav {
     // Story Heading
     article.storyTitle {
       padding: 2em;
-      margin-top: 10vh;
+      //margin-top: 40vh;
       margin-bottom: 0;
 
       h2 {
