--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -482,6 +482,7 @@ nav {
       } //filter
     } //article
 
+
     .storyTitleSpacerAbove {
       padding-top: 40vh;
     }
@@ -516,7 +517,9 @@ nav {
 
   } //section
 
-
+.sectionContainer {
+      padding-top: 40vh;
+    }
 
 
 
