--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -629,6 +629,7 @@ justify-content: space-between;
               position: relative;
               cursor: pointer;
               padding:4px;
+              z-index: 2;
               span{
                 font-size:18px;
                 em{
@@ -688,28 +689,34 @@ justify-content: space-between;
         }//ol
       }//section
       section:first-of-type{
-        ol li img{
-          border-radius: 0;
-          border:none;
-        }
-      }
-      section:last-of-type{
         ol {
           li {
+            position: relative;
             img{
           width:50px;
           height:50px;
           @include transition(all 300ms ease-in); 
+          //position: relative;
             }
             &:hover{
+              z-index: 3;
               img{
-                @include transform(scale(3.7)translate(-30px,0));
-                z-index: 999;
+                @include transform(scale(2)translate(95px,0));
+                z-index: 999 !important;
                 box-shadow: 1px 1px 3px#666, 0 0 1px #777 ;
                 opacity:1;
+                //position: relative;
+                z-index: 3;
               }
             }
           }
+        }
+      }
+         
+      section:last-of-type{
+        ol li img{
+          border-radius: 0;
+          border:none;
         }
       }
 
