--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -662,6 +662,7 @@ nav {
   position: relative;
   cursor: pointer;
   padding: 4px;
+  z-index: 2;
 }
 #filter-wrapper .content section ol li label span {
   font-size: 18px;
@@ -699,11 +700,10 @@ nav {
   opacity: 1;
   background: white;
 }
-#filter-wrapper .content section:first-of-type ol li img {
-  border-radius: 0;
-  border: none;
+#filter-wrapper .content section:first-of-type ol li {
+  position: relative;
 }
-#filter-wrapper .content section:last-of-type ol li img {
+#filter-wrapper .content section:first-of-type ol li img {
   width: 50px;
   height: 50px;
   -webkit-transition: all 300ms ease-in;
@@ -712,15 +712,23 @@ nav {
   -o-transition: all 300ms ease-in;
   transition: all 300ms ease-in;
 }
-#filter-wrapper .content section:last-of-type ol li:hover img {
-  -moz-transform: scale(3.7) translate(-30px, 0);
-  -o-transform: scale(3.7) translate(-30px, 0);
-  -ms-transform: scale(3.7) translate(-30px, 0);
-  -webkit-transform: scale(3.7) translate(-30px, 0);
-  transform: scale(3.7) translate(-30px, 0);
-  z-index: 999;
+#filter-wrapper .content section:first-of-type ol li:hover {
+  z-index: 3;
+}
+#filter-wrapper .content section:first-of-type ol li:hover img {
+  -moz-transform: scale(2) translate(95px, 0);
+  -o-transform: scale(2) translate(95px, 0);
+  -ms-transform: scale(2) translate(95px, 0);
+  -webkit-transform: scale(2) translate(95px, 0);
+  transform: scale(2) translate(95px, 0);
+  z-index: 999 !important;
   box-shadow: 1px 1px 3px #666, 0 0 1px #777;
   opacity: 1;
+  z-index: 3;
+}
+#filter-wrapper .content section:last-of-type ol li img {
+  border-radius: 0;
+  border: none;
 }
 #filter-wrapper input#filter[type=checkbox] {
   display: none;
