fix: adjust filter css

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -114,7 +114,7 @@ layout: base.liquid
     <div id="filter-wrapper">
         <input type="checkbox" id="filter">
         <label aria-label="filter list" class="filter-button" for="filter">
-          <h2>Filter top</h2>
+          <h2>Filter</h2>
         </label>
 
         <div class="content">
@@ -293,13 +293,12 @@ layout: base.liquid
                         </li>
                 </ol>
             </section>
-                <div id="filter-button-bottom">
-                    <input type="checkbox" id="filter">
-                    <label aria-label="filter list" class="filter-button" for="filter">
+            </div>
+
+                    <label aria-label="filter list" class="filter-button-bottom" for="filter">
                     <h2> </h2>
                     </label>
-                </div>
-        </div>
+
     </div>
 
     <div id="legend-wrapper">
