--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -532,12 +532,12 @@ nav {
   overscroll-behavior: contain;
 }
 
-#filter-wrapper, #filter-button-bottom {
+#filter-wrapper {
   z-index: 999;
   pointer-events: auto;
   /* end .content */
 }
-#filter-wrapper > label, #filter-button-bottom > label {
+#filter-wrapper > label {
   display: block;
   -moz-transition: all 200ms ease-in;
   -webkit-transition: all 200ms ease-in;
@@ -558,7 +558,7 @@ nav {
   width: 120px;
   height: 2em;
 }
-#filter-wrapper > label:hover, #filter-button-bottom > label:hover {
+#filter-wrapper > label:hover {
   border: 1px solid #132b19;
   bottom: 12px;
   -webkit-transition: all 400ms ease-in;
@@ -567,21 +567,21 @@ nav {
   -o-transition: all 400ms ease-in;
   transition: all 400ms ease-in;
 }
-#filter-wrapper > label:hover:after, #filter-button-bottom > label:hover:after {
+#filter-wrapper > label:hover:after {
   border: 1px solid #595959;
   border-right: 1px solid transparent;
 }
-#filter-wrapper > label:hover ~ .content, #filter-button-bottom > label:hover ~ .content {
+#filter-wrapper > label:hover ~ .content {
   bottom: -370px; /* content on hover */
 }
-#filter-wrapper > label:hover:before, #filter-button-bottom > label:hover:before {
+#filter-wrapper > label:hover:before {
   -moz-transform: rotate(180deg) translate(0, 1px);
   -o-transform: rotate(180deg) translate(0, 1px);
   -ms-transform: rotate(180deg) translate(0, 1px);
   -webkit-transform: rotate(180deg) translate(0, 1px);
   transform: rotate(180deg) translate(0, 1px);
 }
-#filter-wrapper > label h2, #filter-button-bottom > label h2 {
+#filter-wrapper > label h2 {
   font-size: 14px;
   padding: 6px 20px;
   line-height: 0.2;
@@ -589,7 +589,7 @@ nav {
   font-weight: normal;
   text-transform: uppercase;
 }
-#filter-wrapper > label:before, #filter-button-bottom > label:before {
+#filter-wrapper > label:before {
   content: "▾";
   -moz-transform: rotate(180deg) translate(0, -3px);
   -o-transform: rotate(180deg) translate(0, -3px);
@@ -597,7 +597,7 @@ nav {
   -webkit-transform: rotate(180deg) translate(0, -3px);
   transform: rotate(180deg) translate(0, -3px);
   position: absolute;
-  right: 1em;
+  right: 1.1em;
   bottom: 0.3em;
   -webkit-transition: all 400ms ease-in;
   -moz-transition: all 400ms ease-in;
@@ -605,7 +605,13 @@ nav {
   -o-transition: all 400ms ease-in;
   transition: all 400ms ease-in;
 }
-#filter-wrapper .content, #filter-button-bottom .content {
+#filter-wrapper > label.filter-button-bottom {
+  z-index: 0.5;
+  width: 56px;
+  height: 2em;
+  background: grey;
+}
+#filter-wrapper .content {
   position: fixed;
   right: 0;
   left: 0;
@@ -628,22 +634,22 @@ nav {
   justify-content: space-between;
   flex-wrap: wrap;
 }
-#filter-wrapper .content section, #filter-button-bottom .content section {
+#filter-wrapper .content section {
   width: 45%;
 }
-#filter-wrapper .content section header, #filter-button-bottom .content section header {
+#filter-wrapper .content section header {
   display: flex;
   align-items: stretch;
   justify-content: space-between;
 }
-#filter-wrapper .content section header h3, #filter-button-bottom .content section header h3 {
+#filter-wrapper .content section header h3 {
   margin: 0;
 }
-#filter-wrapper .content section header h3 em, #filter-button-bottom .content section header h3 em {
+#filter-wrapper .content section header h3 em {
   color: #757575;
   font-size: 0.6em;
 }
-#filter-wrapper .content section ol, #filter-button-bottom .content section ol {
+#filter-wrapper .content section ol {
   list-style-type: none;
   max-width: auto;
   margin-left: -40px;
@@ -654,25 +660,25 @@ nav {
     transform: scale(2);
   }*/
 }
-#filter-wrapper .content section ol li, #filter-button-bottom .content section ol li {
+#filter-wrapper .content section ol li {
   margin-bottom: 4px;
 }
-#filter-wrapper .content section ol li label, #filter-button-bottom .content section ol li label {
+#filter-wrapper .content section ol li label {
   display: block;
   position: relative;
   cursor: pointer;
   padding: 4px;
   z-index: 2; /* set a lower z-index than the maps */
 }
-#filter-wrapper .content section ol li label span, #filter-button-bottom .content section ol li label span {
+#filter-wrapper .content section ol li label span {
   font-size: 18px;
 }
-#filter-wrapper .content section ol li label span em, #filter-button-bottom .content section ol li label span em {
+#filter-wrapper .content section ol li label span em {
   font-size: 14px;
   margin-left: 4px;
   font-style: normal;
 }
-#filter-wrapper .content section ol li label img, #filter-button-bottom .content section ol li label img {
+#filter-wrapper .content section ol li label img {
   height: 40px;
   width: 40px;
   transition-duration: 0.2s;
@@ -680,30 +686,30 @@ nav {
   vertical-align: middle;
   margin-right: 8px;
 }
-#filter-wrapper .content section ol li:hover, #filter-button-bottom .content section ol li:hover {
+#filter-wrapper .content section ol li:hover {
   background: #e0e0e0;
   opacity: 0.9;
 }
-#filter-wrapper .content section ol li input[type=checkbox][id^=checkbox], #filter-button-bottom .content section ol li input[type=checkbox][id^=checkbox] {
+#filter-wrapper .content section ol li input[type=checkbox][id^=checkbox] {
   display: none;
 }
-#filter-wrapper .content section ol li input[type=checkbox][id^=mapcheckbox], #filter-button-bottom .content section ol li input[type=checkbox][id^=mapcheckbox] {
+#filter-wrapper .content section ol li input[type=checkbox][id^=mapcheckbox] {
   display: none;
 }
-#filter-wrapper .content section ol li :checked + label, #filter-button-bottom .content section ol li :checked + label {
+#filter-wrapper .content section ol li :checked + label {
   font-weight: bold;
   background: #132b19;
   color: white;
 }
-#filter-wrapper .content section ol li :checked + label img, #filter-button-bottom .content section ol li :checked + label img {
+#filter-wrapper .content section ol li :checked + label img {
   border: 1px solid #124d20;
   opacity: 1;
   background: white;
 }
-#filter-wrapper .content section:first-of-type ol li, #filter-button-bottom .content section:first-of-type ol li {
+#filter-wrapper .content section:first-of-type ol li {
   position: relative;
 }
-#filter-wrapper .content section:first-of-type ol li img, #filter-button-bottom .content section:first-of-type ol li img {
+#filter-wrapper .content section:first-of-type ol li img {
   width: 50px;
   height: 50px;
   -webkit-transition: all 300ms ease-in;
@@ -712,10 +718,10 @@ nav {
   -o-transition: all 300ms ease-in;
   transition: all 300ms ease-in;
 }
-#filter-wrapper .content section:first-of-type ol li:hover, #filter-button-bottom .content section:first-of-type ol li:hover {
+#filter-wrapper .content section:first-of-type ol li:hover {
   z-index: 3;
 }
-#filter-wrapper .content section:first-of-type ol li:hover img, #filter-button-bottom .content section:first-of-type ol li:hover img {
+#filter-wrapper .content section:first-of-type ol li:hover img {
   -moz-transform: scale(2) translate(95px, 0);
   -o-transform: scale(2) translate(95px, 0);
   -ms-transform: scale(2) translate(95px, 0);
@@ -725,25 +731,25 @@ nav {
   opacity: 1;
   z-index: 3;
 }
-#filter-wrapper .content section:last-of-type ol li img, #filter-button-bottom .content section:last-of-type ol li img {
+#filter-wrapper .content section:last-of-type ol li img {
   border-radius: 0;
   border: none;
 }
-#filter-wrapper input#filter[type=checkbox], #filter-button-bottom input#filter[type=checkbox] {
+#filter-wrapper input#filter[type=checkbox] {
   display: none;
 }
-#filter-wrapper input#filter[type=checkbox]:checked ~ .content, #filter-button-bottom input#filter[type=checkbox]:checked ~ .content {
+#filter-wrapper input#filter[type=checkbox]:checked ~ .content {
   bottom: 0px; /* content on click */
 }
-#filter-wrapper input#filter[type=checkbox]:checked ~ label.filter-button, #filter-button-bottom input#filter[type=checkbox]:checked ~ label.filter-button {
+#filter-wrapper input#filter[type=checkbox]:checked ~ label.filter-button {
   bottom: 385px;
   background: #132b19;
   /* cross icon */
 }
-#filter-wrapper input#filter[type=checkbox]:checked ~ label.filter-button h2, #filter-button-bottom input#filter[type=checkbox]:checked ~ label.filter-button h2 {
+#filter-wrapper input#filter[type=checkbox]:checked ~ label.filter-button h2 {
   color: white;
 }
-#filter-wrapper input#filter[type=checkbox]:checked ~ label.filter-button:before, #filter-button-bottom input#filter[type=checkbox]:checked ~ label.filter-button:before {
+#filter-wrapper input#filter[type=checkbox]:checked ~ label.filter-button:before {
   content: "▾";
   -moz-transform: rotate(0) translate(0, 1px);
   -o-transform: rotate(0) translate(0, 1px);
@@ -752,16 +758,131 @@ nav {
   transform: rotate(0) translate(0, 1px);
   color: white;
 }
-#filter-wrapper input#filter[type=checkbox]:checked ~ label.filter-button:hover:before, #filter-button-bottom input#filter[type=checkbox]:checked ~ label.filter-button:hover:before {
+#filter-wrapper input#filter[type=checkbox]:checked ~ label.filter-button:hover:before {
   transform: translate(0, 3px);
 }
-
-#legend-wrapper {
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.filter-button-bottom {
+  bottom: 0px;
+  background: #132b19;
+  /* cross icon */
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.filter-button-bottom > label {
+  display: block;
+  -moz-transition: all 200ms ease-in;
+  -webkit-transition: all 200ms ease-in;
+  -o-transition: all 200ms ease-in;
+  transition: all 200ms ease-in;
+  z-index: 2;
+  cursor: pointer;
+  right: 0px;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  position: fixed;
+  transform-origin: top center;
+  font-size: 1.2em;
+  background: #f2f2f2;
+  color: black;
+  border: 1px solid #c1c1c1;
+  width: 60px !important;
+  height: 2em;
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.filter-button-bottom > label:hover {
+  border: 1px solid #132b19;
+  bottom: 12px;
+  -webkit-transition: all 400ms ease-in;
+  -moz-transition: all 400ms ease-in;
+  -ms-transition: all 400ms ease-in;
+  -o-transition: all 400ms ease-in;
+  transition: all 400ms ease-in;
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.filter-button-bottom > label:hover:after {
+  border: 1px solid #595959;
+  border-right: 1px solid transparent;
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.filter-button-bottom > label:hover ~ .content {
+  bottom: -370px; /* content on hover */
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.filter-button-bottom > label:hover:before {
+  -moz-transform: rotate(180deg) translate(0, 1px);
+  -o-transform: rotate(180deg) translate(0, 1px);
+  -ms-transform: rotate(180deg) translate(0, 1px);
+  -webkit-transform: rotate(180deg) translate(0, 1px);
+  transform: rotate(180deg) translate(0, 1px);
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.filter-button-bottom > label h2 {
+  font-size: 14px;
+  padding: 6px 20px;
+  line-height: 0.2;
+  color: #404040;
+  font-weight: normal;
+  text-transform: uppercase;
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.filter-button-bottom > label:before {
+  content: "▾";
+  -moz-transform: rotate(180deg) translate(0, -3px);
+  -o-transform: rotate(180deg) translate(0, -3px);
+  -ms-transform: rotate(180deg) translate(0, -3px);
+  -webkit-transform: rotate(180deg) translate(0, -3px);
+  transform: rotate(180deg) translate(0, -3px);
+  position: absolute;
+  right: 1em;
+  bottom: 0.3em;
+  -webkit-transition: all 400ms ease-in;
+  -moz-transition: all 400ms ease-in;
+  -ms-transition: all 400ms ease-in;
+  -o-transition: all 400ms ease-in;
+  transition: all 400ms ease-in;
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.filter-button-bottom h2 {
+  color: rgb(255, 0, 0);
+  font-size: 1.2em;
+  background: #f2f2f2;
+  border: 1px solid #08120b;
+  width: 60px !important;
+  height: 2em;
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.filter-button-bottom h2:hover {
+  border: 1px solid #132b19;
+  bottom: 12px;
+  -webkit-transition: all 400ms ease-in;
+  -moz-transition: all 400ms ease-in;
+  -ms-transition: all 400ms ease-in;
+  -o-transition: all 400ms ease-in;
+  transition: all 400ms ease-in;
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.filter-button-bottom h2:hover:after {
+  border: 1px solid #595959;
+  border-right: 1px solid transparent;
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.filter-button-bottom h2:hover ~ .content {
+  bottom: -370px; /* content on hover */
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.filter-button-bottom h2:hover:before {
+  -moz-transform: rotate(180deg) translate(0, 1px);
+  -o-transform: rotate(180deg) translate(0, 1px);
+  -ms-transform: rotate(180deg) translate(0, 1px);
+  -webkit-transform: rotate(180deg) translate(0, 1px);
+  transform: rotate(180deg) translate(0, 1px);
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.filter-button-bottom:before {
+  content: "▾";
+  -moz-transform: rotate(0) translate(0, 1px);
+  -o-transform: rotate(0) translate(0, 1px);
+  -ms-transform: rotate(0) translate(0, 1px);
+  -webkit-transform: rotate(0) translate(0, 1px);
+  transform: rotate(0) translate(0, 1px);
+  color: rgb(0, 0, 0);
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.filter-button-bottom:hover:before {
+  transform: translate(0, 3px);
+}
+#filter-wrapper #legend-wrapper {
   z-index: 99;
   pointer-events: auto;
   /* end .content */
 }
-#legend-wrapper > label {
+#filter-wrapper #legend-wrapper > label {
   display: block;
   -webkit-transition: all 400ms ease-in;
   -moz-transition: all 400ms ease-in;
@@ -788,7 +909,7 @@ nav {
   width: 120px;
   height: 2em;
 }
-#legend-wrapper > label:hover {
+#filter-wrapper #legend-wrapper > label:hover {
   border: 1px solid #132b19;
   right: -18px;
   -webkit-transition: all 400ms ease-in;
@@ -797,21 +918,21 @@ nav {
   -o-transition: all 400ms ease-in;
   transition: all 400ms ease-in;
 }
-#legend-wrapper > label:hover:after {
+#filter-wrapper #legend-wrapper > label:hover:after {
   border: 1px solid #595959;
   border-right: 1px solid transparent;
 }
-#legend-wrapper > label:hover ~ .content {
+#filter-wrapper #legend-wrapper > label:hover ~ .content {
   right: -200px; /* content on hover */
 }
-#legend-wrapper > label:hover:before {
+#filter-wrapper #legend-wrapper > label:hover:before {
   -moz-transform: rotate(180deg) translate(0, -1px);
   -o-transform: rotate(180deg) translate(0, -1px);
   -ms-transform: rotate(180deg) translate(0, -1px);
   -webkit-transform: rotate(180deg) translate(0, -1px);
   transform: rotate(180deg) translate(0, -1px);
 }
-#legend-wrapper > label h2 {
+#filter-wrapper #legend-wrapper > label h2 {
   font-size: 14px;
   padding: 6px 20px;
   line-height: 0.5;
@@ -819,7 +940,7 @@ nav {
   font-weight: normal;
   text-transform: uppercase;
 }
-#legend-wrapper > label:before {
+#filter-wrapper #legend-wrapper > label:before {
   content: "▾";
   -moz-transform: rotate(180deg) translate(0, -3px);
   -o-transform: rotate(180deg) translate(0, -3px);
@@ -835,7 +956,7 @@ nav {
   -o-transition: all 400ms ease-in;
   transition: all 400ms ease-in;
 }
-#legend-wrapper .content {
+#filter-wrapper #legend-wrapper .content {
   position: fixed;
   top: 0;
   bottom: 0;
@@ -855,21 +976,21 @@ nav {
   margin: auto;
   border: 1px solid #132b19;
 }
-#legend-wrapper input#legend[type=checkbox] {
+#filter-wrapper #legend-wrapper input#legend[type=checkbox] {
   display: none;
 }
-#legend-wrapper input#legend[type=checkbox]:checked ~ .content {
+#filter-wrapper #legend-wrapper input#legend[type=checkbox]:checked ~ .content {
   right: 0px; /* content on click */
 }
-#legend-wrapper input#legend[type=checkbox]:checked ~ label.legend-button {
+#filter-wrapper #legend-wrapper input#legend[type=checkbox]:checked ~ label.legend-button {
   right: 185px;
   background: #132b19;
   /* cross icon */
 }
-#legend-wrapper input#legend[type=checkbox]:checked ~ label.legend-button h2 {
+#filter-wrapper #legend-wrapper input#legend[type=checkbox]:checked ~ label.legend-button h2 {
   color: white;
 }
-#legend-wrapper input#legend[type=checkbox]:checked ~ label.legend-button:before {
+#filter-wrapper #legend-wrapper input#legend[type=checkbox]:checked ~ label.legend-button:before {
   content: "▾";
   -moz-transform: rotate(0) translate(0, 1px);
   -o-transform: rotate(0) translate(0, 1px);
@@ -878,6 +999,6 @@ nav {
   transform: rotate(0) translate(0, 1px);
   color: white;
 }
-#legend-wrapper input#legend[type=checkbox]:checked ~ label.legend-button:hover:before {
+#filter-wrapper #legend-wrapper input#legend[type=checkbox]:checked ~ label.legend-button:hover:before {
   transform: translate(0, 3px);
 }
